<resources>
    <string name="app_name">Playlist maker</string>
    <string name="bt_find">Поиск</string>
    <string name="bt_media">Медиатека</string>
    <string name="bt_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="bt_back">Назад</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="choose_messenger">Выберете приложение</string>
    <string name="write_support_address">aleks-deuce@yandex.ru</string>
    <string name="write_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="ph_refresh">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="you_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>