<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    style="@style/LinearLayoutMain">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            style="@style/TextViewTitle"
            android:layout_margin="18dp"
            android:text="@string/app_name"
            android:textColor="@color/white" />

    </FrameLayout>

    <LinearLayout
        style="@style/LinearLayoutStandard"
        android:padding="8dp">

        <Button
            android:id="@+id/btnSearch"
            android:text="@string/bt_find"
            app:icon="@drawable/ic_search_24"
            style="@style/ButtonMainActivity"/>

        <Button
            android:id="@+id/btnMedia"
            android:text="@string/bt_media"
            app:icon="@drawable/ic_media_24"
            style="@style/ButtonMainActivity"/>

        <Button
            android:id="@+id/btnSettings"
            android:text="@string/bt_settings"
            app:icon="@drawable/ic_settings_24"
            style="@style/ButtonMainActivity"/>

    </LinearLayout>

</LinearLayout>