<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    tools:context=".SettingsActivity"
    style="@style/LinearLayoutSettings">

    <LinearLayout
        style="@style/LinearLayoutTitle"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/btnSettingsBack"
            style="@style/ButtonBackTitle"
            android:contentDescription="@string/bt_settings"/>

        <TextView
            style="@style/TextViewTitle"
            android:text="@string/bt_settings" />

    </LinearLayout>

    <FrameLayout
        style="@style/FrameLayoutMenu">

        <TextView
            style="@style/TextViewMenu"
            android:text="@string/dark_theme"/>

        <Switch
            style="@style/ImageViewMenu"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnSharingTo"
        style="@style/FrameLayoutMenu">

        <TextView
            style="@style/TextViewMenu"
            android:text="@string/share"/>

        <ImageView
            style="@style/ImageViewMenu"
            android:src="@drawable/ic_share_24"
            android:contentDescription="@string/share" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnWriteSupport"
        style="@style/FrameLayoutMenu">

        <TextView
            style="@style/TextViewMenu"
            android:text="@string/write_support"/>

        <ImageView
            style="@style/ImageViewMenu"
            android:src="@drawable/ic_support_24"
            android:contentDescription="@string/write_support"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnUserAgreement"
        style="@style/FrameLayoutMenu">

        <TextView
            style="@style/TextViewMenu"
            android:text="@string/user_agreement"/>

        <ImageView
            style="@style/ImageViewMenu"
            android:src="@drawable/ic_forward_24"
            android:contentDescription="@string/user_agreement"/>

    </FrameLayout>


</LinearLayout>