<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    tools:context=".SearchActivity"
    style="@style/LinearLayoutSettings">

    <LinearLayout
        style="@style/LinearLayoutTitle"
        android:layout_marginBottom="0dp">

        <ImageView
            android:id="@+id/btnSearchBack"
            style="@style/ButtonBackTitle"
            android:contentDescription="@string/bt_find"/>

        <TextView
            style="@style/TextViewTitle"
            android:text="@string/bt_find"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_clear_16"
            android:layout_marginRight="12dp"
            android:contentDescription="X"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracks"
            style="@style/RvTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/track_view"
            tools:itemCount="7"/>

        <LinearLayout
            android:id="@+id/placeholder"
            style="@style/placeholder"

            android:visibility="gone">
        
            <ImageView
                android:id="@+id/placeholderImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/connection_problem_120"/>

            <TextView
                android:id="@+id/placeholderTextView"
                style="@style/placeholderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="@string/connection_problem"/>

            <Button
                android:id="@+id/placeholderButton"
                style="@style/placeholderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ph_refresh"
                android:visibility="gone"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/textYouLookingFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:text="@string/you_looking_for"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            style="@style/RvTrack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/track_view"
            tools:itemCount="13"/>

        <Button
            android:id="@+id/btnClearHistory"
            style="@style/buttonYouLookingFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:text="@string/clear_history"/>

    </LinearLayout>

</LinearLayout>